[package]
name = "lmdb-rs-m"
version = "0.7.7"
authors = ["Valerii Hiora <valerii.hiora@gmail.com>"]
license = "MIT"
description = "LMDB bindings"
repository = "https://github.com/itiu/lmdb-rs"
documentation = "https://vhbit.github.io/lmdb-rs/lmdb_rs"
readme = "README.md"
keywords = ["lmdb", "db", "key-value", "kvs", "kv"]
exclude = [
        ".gitignore",
        ".travis.yml",
        "up_doc.sh",
]

[dependencies.liblmdb-sys-m]
path = "liblmdb-sys-m"
version = "0.2.3"

[dependencies]
log = "0.3"
libc = "0.2"
bitflags = "0.7"
