[package]
name = "liblmdb-sys-m"
version = "0.2.4"
authors = ["Valerii Hiora <valerii.hiora@gmail.com>"]
links = "lmdb"
license = "MIT"
description = "LMDB native lib"
repository = "https://github.com/ValeriyBushenev/lmdb-rs"
build = "build.rs"

[dependencies]
libc = "0.2"
[build-dependencies]
gcc = "0.3"
